@@ -119,6 +119,7 @@
 #    error ETH1 PHY unrecognized
 #  endif
 #endif
+
 /************************************************************************************
  * Public Functions
  ************************************************************************************/
