@@ -6043,5 +6043,6 @@
 	* fs/procfs:  Add a little, primitive procfs file system. (2013-11-13).
 	* fs/binfs/README.txt:  Add a README file for binfs (2013-11-13).
 	* arch/arm/src/stm32/Kconfig:  Add missing setup of CAN TSEG1 and
-	  TSEG2 values.  From Martin Lederhilger (2013-11014).
-
+	  TSEG2 values.  From Martin Lederhilger (2013-11-14).
+	* arch/arm/src/sama5/sam_pck.c and .h:  Add support for programmable
+	  clock outputs (2013-11-14).
